_sass/app.scss
/* ... */
.about-pillar__dropdown--sustainability--zebra {
  background-color: #7ab063;
}
/******************************************************************
END ABOUT UW OSHKOSH
******************************************************************/

/******************************************************************
ACADEMICS
******************************************************************/
.academics-row {
  padding-right: 32px;
  padding-left: 32px;
}
.learn-grid {
  text-align: center;
}
.learning-bottom-bar {
  background-color: #0093c6;
  color: #fff;
  margin-bottom: -33px;
  padding: 16px;
  a {
    color: #fff;
  }
}
/******************************************************************
END ACADEMICS
******************************************************************/

/******************************************************************
CURRENT STUDENTS
******************************************************************/
.my-uwo {
  padding-right: 10px;
}
.my-uwo-paragraph {
  margin-bottom: 8px;
}
/******************************************************************
END CURRENT STUDENTS
******************************************************************/

/******************************************************************
NAV DRAWERS
******************************************************************/
.nav-info {
  display: none;
  position: absolute;
  z-index: 9999;
  width: 100%;
}

/******************************************************************
END NAV DRAWERS
******************************************************************/

/******************************************************************
HOME
******************************************************************/
.home-slider__caption {
  background-color: transparent !important;
  bottom: 10px !important;
  padding-left: 0 !important;
}
.home-slider__caption__content {
  background-color: rgba(230, 134, 0, 0.9);
  width: 50%;
  padding: 8px 10px 8px 10px;
}
.home-slider__caption__title {
  font-weight: $normal;
}
.home-slider__caption__excerpt {
  background-color: #fff;
  padding: 8px 40px 8px 10px;
  margin-left: -10px;
}
.home-slider__caption__read-more {
  background-color: $dark-orange;
  color: #fff;
  padding: 8px 10px 8px 10px;
}
/******************************************************************
END HOME
******************************************************************/

/******************************************************************
PANELS
******************************************************************/
.panel {
  box-shadow: 0 0 5px $medium-gray;
  background: #fff;
  padding: 0;
}
.panel:hover {
  box-shadow: 0 0 5px $blue;
}
.panel__category {
  font-size: 13px;
  color: $medium-gray;
  font-weight: $semibold;
  a {
    color: $medium-gray;
  }
}
.panel__title {
  font-size: 18px;
  font-weight: $semibold;
  color: $dark-gray !important;
  height: 56px;
  padding: 8px 16px 0 16px;
  border-bottom: 1px solid $light-gray;
  margin-top: 0.2rem !important;
}
.panel h3 {
  margin-bottom: 0;
}
.panel__title--small {
  font-size: 13px;
  line-height: 19px;
}
.panel__news-heading {
  font-size: 18px;
  color: $dark-gray;
  font-weight: $semibold;
}
.panel__news-excerpt {

}
.panel__teaser {
  margin-bottom: 0;
  padding: 0 16px 16px 16px;
}
.panel__posted-date {
  font-size: 11px;
  color: $medium-gray;
  font-weight: $semibold;
  position: absolute;
  bottom: 25px;
}
.panel__image {
  padding: 16px;
}
.panel__image--non-accordion {
}
.panel__image__caption {
  padding: 0 16px 8px 16px;
}
.panel__image--home {
  // height: 189px;
}
.panel__content {
  //padding: 8px 16px 8px 16px;
  padding: 0;
}
.panel--home {
  height: 410px;
  border-top: 3px solid $medium-dark-gray;
  padding: 1.25rem;
}
.panel__video-wrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  height: 0;
  overflow: hidden;
  text-align: center;
}
.panel__video-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
/*.panel--green {
  border-top-color: $green;
}
.panel--dark-green {
  border-top-color: $dark-green;
}
.panel--blue {
  border-top-color: $blue;
}
.panel--dark-blue {
  border-top-color: $dark-blue;
}
.panel--orange {
  border-top-color: $orange;
}
.panel--dark-orange {
  border-top-color: $dark-orange;
}
.panel--yellow {
  border-top-color: $yellow;
}
.panel--dark-yellow {
  border-top-color: $dark-yellow;
}*/
/******************************************************************
END PANELS
******************************************************************/

/******************************************************************
PAGE BANNERS
******************************************************************/
.page-banner {
  min-height: 64px;
  padding-left: 10px;
  margin-top: 0;
  padding-top: 10px;
}
.page-banner__title {
  color: #fff;
  margin-top: 0;
  font-size: 28px;
}
.page-banner--blue {
  background-color: $blue;
}
.page-banner--dark-blue {
  background-color: $dark-blue;
}
.page-banner--orange {
  background-color: $orange;
}
.page-banner--dark-orange {
  background-color: $dark-orange;
}
.page-banner--dark-green {
  background-color: $dark-green;
}
.page-banner--medium-dark-gray {
  background-color: $medium-dark-gray;
}
.page-banner--dark-gray {
  background-color: $dark-gray;
}
/******************************************************************
END PAGE BANNERS
******************************************************************/

/******************************************************************
CTAs
******************************************************************/
.cta {
  min-height: 48px;
  padding-left: 10px;
  padding-top: 7px;
  margin-bottom: 16px;
}
.cta--home {
  padding-top: 10px;
}
.cta--parents {
  padding-top: 15px;
  margin-bottom: 16px;
}
.cta--accreditation {
  width: 218px;
  margin-left: 0 !important;
}
.cta--fast-facts {
  width: 212px;
  margin-left: 0 !important;
}
.cta--points-of-pride {
  width: 242px;
  margin-left: 0 !important;
}
/* ... */

